<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center_horizontal"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="400dp"
        android:layout_height="160dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/cate_logo"
        android:src="@drawable/cate_logo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:id="@+id/new_Name"
        android:hint="@string/input_name"
        android:importantForAutofill="no"/>

    <Button
        android:text="@string/request_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_submit"
        android:background="@drawable/button"/>

</LinearLayout>