<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#f0f0f0"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:background="@drawable/border_bottom">

    <TextView
        android:id="@+id/textAuthor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="#0A0AFA"
        android:text="@string/author"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />



    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textSize="14sp"
        android:text="@string/date" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/imageDeleteComment"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="end"
        android:src="@drawable/delete"
        android:contentDescription="@string/image" />

</LinearLayout>

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:paddingBottom="5dp"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/desc" />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageCommentLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_thumb_up_24px"
        android:contentDescription="@string/image"  />

    <TextView
        android:id="@+id/textCommentCountLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/_00"
        android:textSize="16sp"
        android:textColor="@color/common_ec_blue_txt" />

    <ImageView
        android:id="@+id/commentDisLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@drawable/ic_thumb_down_24px"
        android:contentDescription="@string/image"  />

    <TextView
        android:id="@+id/textCommentCountDisLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:text="@string/_00"
        android:textSize="16sp"
        android:textColor="@color/common_red_txt" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/declaration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/report"
        android:textColor="@color/common_red_txt"
        android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>