<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:padding="30dp"
    android:layout_height="wrap_content">

    <TextView
        android:text="비디오를 넣어주세요!"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:textSize="25dp"
        android:layout_height="wrap_content"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/url_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/url" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinnerCate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <Button
        android:id="@+id/button_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

</LinearLayout>