<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <WebView
        android:id="@+id/twitchPlayer"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <LinearLayout
        android:id="@+id/layoutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_detail"
        android:paddingBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:maxLines="2"
                android:text="@string/video_title"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/declaration_posting"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/declaration"
                android:visibility="visible"
                android:contentDescription="@string/image" />

            <ImageView
                android:id="@+id/img_left_header"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/share"
                android:visibility="visible"
                android:contentDescription="@string/image" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:text="@string/description"
            android:background="@drawable/border_detail"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/common_gray_txt"
            android:textSize="16sp"
            android:paddingBottom="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/imageButtonLike"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@drawable/ic_thumb_up_24px"
                android:contentDescription="@string/image" />

            <TextView
                android:id="@+id/countLike"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/_00"
                android:textSize="20sp"
                android:layout_weight="1"
                android:textColor="@color/common_ec_blue_txt" />

            <ImageView
                android:id="@+id/imageButtonDisLike"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:src="@drawable/ic_thumb_down_24px"
                android:background="@drawable/border_left_gray"
                android:contentDescription="@string/image"/>

            <TextView
                android:id="@+id/countDisLike"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_00"
                android:textSize="20sp"
                android:textColor="@color/common_red_txt" />
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:id="@+id/commentList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:background="@drawable/border">

        <EditText
            android:id="@+id/descText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:ems="10"
            android:hint="@string/input_comment"
            android:inputType="textPersonName"
            android:background="@null"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/insertButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button"
            android:text="@string/input" />
    </LinearLayout>
</LinearLayout>