<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/youtube_post_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="0.5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ImageThumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:contentDescription="@string/thumbnail"/>

    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/list_line"
        android:orientation="horizontal"
        android:paddingBottom="2dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:singleLine="true"
            android:text="@string/video_title"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textVideoLikes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/ic_thumb_up_24px"
            android:contentDescription="@string/image"  />

        <TextView
            android:id="@+id/textVideoLikes"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="@string/_00"
            android:layout_marginEnd="20dp"
            android:textColor="@color/common_ec_blue_txt"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textVideoDislikes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/ic_thumb_down_24px"
            android:contentDescription="@string/image" />


        <TextView
            android:id="@+id/textVideoDislikes"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="20dp"
            android:gravity="center_vertical"
            android:text="@string/_00"
            android:textColor="@color/common_red_txt"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>